--- a/BlazorFrameworkDemo/_Imports.razor
+++ b/BlazorFrameworkDemo/_Imports.razor
@@ -1,7 +1,11 @@
-﻿namespace BlazorFrameworkDemo
-{
-    public class _Imports_razor
-    {
-        
-    }
-}
+﻿@using System.Net.Http
+@using System.Net.Http.Json
+@using Microsoft.AspNetCore.Components.Forms
+@using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.JSInterop
+
+@using BlazorFrameworkDemo
+@using BlazorFrameworkDemo.Shared
