Setup the Slider to use mouse scroll.

--- a/BlazorFrameworkDemo/Components/BasicElement.razor
+++ b/BlazorFrameworkDemo/Components/BasicElement.razor
@@ -6,6 +6,9 @@
 
 @code {
 
+    [Inject]
+    public IJSRuntime JsRuntime { get; set; }
+    
     protected override Task OnAfterRenderAsync(bool firstRender)
     {
         if(firstRender) StateHasChanged();
